Ultimos retoques a la paginas de las consolas

--- a/Paginas/nintendo.html
+++ b/Paginas/nintendo.html
@@ -8,7 +8,7 @@
     <title>Nintendo</title>
 </head>
 
-<body class="PNintendo">
+<body class="Nintendo">
     <!-- navbar -->
     <header>
         <nav class="navbar">
@@ -24,88 +24,100 @@
             </ul>
         </nav>
     </header>
-
-    <section>
+    <section class="cronologia">
         <h1>Consolas de Nintendo</h1>
-
-        <div>
+        <div class="consolaspaginas">
             <h2>1996 - Nintendo 64</h2>
-            <p>La Nintendo 64 fue lanzada en 1996 y fue la primera consola de Nintendo en utilizar gráficos tridimensionales completos.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> NEC VR4300 93.75 MHz</li>
-                <li><strong>GPU:</strong> RCP 62.5 MHz</li>
-                <li><strong>Memoria:</strong> 4 MB a 8 MB de RAM </li>
-                <li><strong>Almacenamiento:</strong> Cartuchos de hasta 64 MB</li>
-            </ul>
+            <p>La Nintendo 64 fue lanzada en 1996 y fue la primera consola de Nintendo en utilizar gráficos
+                tridimensionales completos.</p>
             <img src="/Imagenes/Nintendo 64.png" alt="Nintendo 64">
-        </div>
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> NEC VR4300 93.75 MHz</li>
+                    <li><strong>GPU:</strong> RCP 62.5 MHz</li>
+                    <li><strong>Memoria:</strong> 4 MB a 8 MB de RAM</li>
+                    <li><strong>Almacenamiento:</strong> Cartuchos de hasta 64 MB</li>
+                </ul>
 
-        <div>
+            </div>
+        </div>
+        <div class="consolaspaginas">
             <h2>2001 - GameCube</h2>
             <p>La Nintendo GameCube fue lanzada en 2001, ofreciendo un enfoque en el multijugador local.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> IBM PowerPC Gekko 485 MHz</li>
-                <li><strong>GPU:</strong> ATI "Flipper" 162 MHz</li>
-                <li><strong>Memoria:</strong> 24 MB RAM </li>
-                <li><strong>Almacenamiento:</strong> 1.5 GB</li>
-            </ul>
-            <img src="/Imagenes/Nintendo GameCube.png" alt="Nintendo GameCube">
-        </div>
+            <img src="/Imagenes/Nintendo Game Cube.png" alt="Nintendo GameCube">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> IBM PowerPC Gekko 485 MHz</li>
+                    <li><strong>GPU:</strong> ATI "Flipper" 162 MHz</li>
+                    <li><strong>Memoria:</strong> 24 MB RAM</li>
+                    <li><strong>Almacenamiento:</strong> 1.5 GB</li>
+                </ul>
 
-        <div>
+            </div>
+        </div>
+        <div class="consolaspaginas">
             <h2>2001 - Game Boy Advance</h2>
-            <p>La Game Boy Advance, lanzada en 2001, fue una consola portátil que llevó los juegos de Nintendo a una nueva era de color.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> ARM7TDMI 16.78 MHz</li>
-                <li><strong>GPU:</strong> Custom 2D core</li>
-                <li><strong>Memoria:</strong> 32 KB RAM + 96 KB VRAM</li>
-                <li><strong>Almacenamiento:</strong> Cartuchos de hasta 32 MB</li>
-            </ul>
-            <img src="/Imagenes/Nintendo Game Boy advance.png" alt="Game Boy Advance">
-        </div>
+            <p>La Game Boy Advance, lanzada en 2001, fue una consola portátil que llevó los juegos de Nintendo a una
+                nueva era de color.</p>
+            <img src="/Imagenes/Nintendo Game Boy Advance.png" alt="Game Boy Advance">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> ARM7TDMI 16.78 MHz</li>
+                    <li><strong>GPU:</strong> Custom 2D core</li>
+                    <li><strong>Memoria:</strong> 32 KB RAM + 96 KB VRAM</li>
+                    <li><strong>Almacenamiento:</strong> Cartuchos de hasta 32 MB</li>
+                </ul>
 
-        <div>
+            </div>
+        </div>
+        <div class="consolaspaginas">
             <h2>2004 - Nintendo DS</h2>
-            <p>La Nintendo DS fue lanzada en 2004, revolucionando el mercado de las consolas portátiles con su pantalla doble y capacidades táctiles.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> ARM946E-S 67 MHz + ARM7TDMI 33 MHz</li>
-                <li><strong>GPU:</strong> 2D/3D dual screen engine</li>
-                <li><strong>Memoria:</strong> 4 MB RAM</li>
-                <li><strong>Almacenamiento:</strong> Cartuchos de hasta 512 MB</li>
-            </ul>
+            <p>La Nintendo DS fue lanzada en 2004, revolucionando el mercado de las consolas portátiles con su pantalla
+                doble y capacidades táctiles.</p>
             <img src="/Imagenes/Nintendo DS.png" alt="Nintendo DS">
-        </div>
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> ARM946E-S 67 MHz + ARM7TDMI 33 MHz</li>
+                    <li><strong>GPU:</strong> 2D/3D dual screen engine</li>
+                    <li><strong>Memoria:</strong> 4 MB RAM</li>
+                    <li><strong>Almacenamiento:</strong> Cartuchos de hasta 512 MB</li>
+                </ul>
 
-        <div>
+            </div>
+        </div>
+        <div class="consolaspaginas">
             <h2>2006 - Nintendo Wii</h2>
             <p>La Nintendo Wii fue lanzada en 2006 y se destacó por su control de movimiento revolucionario.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> IBM PowerPC Broadway 729 MHz</li>
-                <li><strong>GPU:</strong> ATI "Hollywood" 243 MHz</li>
-                <li><strong>Memoria:</strong> 88 MB de RAM </li>
-                <li><strong>Almacenamiento:</strong> 512 MB de almacenamiento interno</li>
-            </ul>
             <img src="/Imagenes/Nintendo Wii.png" alt="Nintendo Wii">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> IBM PowerPC Broadway 729 MHz</li>
+                    <li><strong>GPU:</strong> ATI "Hollywood" 243 MHz</li>
+                    <li><strong>Memoria:</strong> 88 MB de RAM</li>
+                    <li><strong>Almacenamiento:</strong> 512 MB de almacenamiento interno</li>
+                </ul>
+            </div>
         </div>
-
-        <div>
+        <div class="consolaspaginas">
             <h2>2017 - Nintendo Switch</h2>
-            <p>La Nintendo Switch fue lanzada en 2017, destacándose por su capacidad híbrida que permite jugar tanto en casa como en modo portátil.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> NVIDIA Tegra X1</li>
-                <li><strong>GPU:</strong> NVIDIA Maxwell GPU</li>
-                <li><strong>Memoria:</strong> 4 GB RAM</li>
-                <li><strong>Almacenamiento:</strong> 32 GB de almacenamiento interno</li>
-            </ul>
+            <p>La Nintendo Switch fue lanzada en 2017, destacándose por su capacidad híbrida que permite jugar tanto en
+                casa como en modo portátil.</p>
             <img src="/Imagenes/Nintendo Switch.png" alt="Nintendo Switch">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> NVIDIA Tegra X1</li>
+                    <li><strong>GPU:</strong> NVIDIA Maxwell GPU</li>
+                    <li><strong>Memoria:</strong> 4 GB RAM</li>
+                    <li><strong>Almacenamiento:</strong> 32 GB de almacenamiento interno</li>
+                </ul>
+            </div>
         </div>
-
     </section>
 
     <!-- Footer -->
@@ -116,7 +128,7 @@
                 <p class="info-footer">Información de Contacto</p>
                 <ul>
                     <li>Email: htrrodrigo9@gmail.com</li>
-                    <li>Email: santiagolara1242@gmail.com </li>
+                    <li>Email: santiagolara1242@gmail.com</li>
                 </ul>
             </div>
 
