--- a/Paginas/playstation.html
+++ b/Paginas/playstation.html
@@ -10,7 +10,7 @@
 
 <body class="Play">
     <!-- navbar -->
-    <header >
+    <header>
         <nav class="navbar">
             <a href="index.html" class="contenedor-logo">
                 <img src="/Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
@@ -25,27 +25,30 @@
         </nav>
     </header>
 
-    <section>
+    <section class="cronologia">
         <h1>Consolas de PlayStation</h1>
 
-        <div>
+        <div class="consolaspaginas">
             <h2>1994 - PlayStation</h2>
-            <p>La PlayStation original fue lanzada por Sony en 1994, revolucionando el mundo de los videojuegos con su
-                capacidad para gráficos 3D.</p>
+            <p>La PlayStation original fue lanzada por Sony en 1994, revolucionando el mundo de los videojuegos con su capacidad para gráficos 3D.</p>
+            <img src="/Imagenes/Playstation 1.png" alt="PlayStation 1">
+           
+           <div class="especificaciones"> 
             <h3>Especificaciones de Hardware</h3>
             <ul>
                 <li><strong>CPU:</strong> 33.8688 Mhz </li>
                 <li><strong>GPU:</strong> 1 MB de VRAM</li>
                 <li><strong>Memoria Ram:</strong> 2 MB de RAM</li>
-                <li><strong>Memory card</strong>EEPROM de 128 kilobytes </li>
+                <li><strong>Memory card</strong> EEPROM de 128 kilobytes </li>
             </ul>
-            <img src="../Imagenes/Playstation 1.png" alt="PlayStation 1">
+           </div>
         </div>
 
-        <div>
+        <div class="consolaspaginas">
             <h2>2000 - PlayStation 2</h2>
-            <p>PlayStation 2 fue lanzada en el año 2000, siendo la consola más vendida de todos los tiempos, con más de
-                155 millones de unidades vendidas.</p>
+            <p>PlayStation 2 fue lanzada en el año 2000, siendo la consola más vendida de todos los tiempos, con más de 155 millones de unidades vendidas.</p>
+            <img src="/Imagenes/Playstation 2.png" alt="PlayStation 2">
+            <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
                 <li><strong>CPU:</strong> 294 MHz Emotion Engine</li>
@@ -53,12 +56,14 @@
                 <li><strong>Memoria:</strong> 32 MB de RAM</li>
                 <li><strong>Memory card:</strong> 8 MB a 32 MB</li>
             </ul>
-            <img src="../Imagenes/Playstation 2.png" alt="PlayStation 2">
+           </div>
+            
         </div>
-        <div>
+        <div class="consolaspaginas">
             <h2>2004 - Playstation Portable (PSP)</h2>
-            <p>La PlayStation Portable (PSP) fue lanzada en 2004 en Japón y en 2005 a nivel mundial. Fue la primera
-                consola portátil de Sony.</p>
+            <p>La PlayStation Portable (PSP) fue lanzada en 2004 en Japón y en 2005 a nivel mundial. Fue la primera consola portátil de Sony.</p>
+            <img src="/Imagenes/Playstation Portable.png" alt="Playstation Portable">
+            <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
                 <li><strong>CPU:</strong> 333 Mhz</li>
@@ -66,26 +71,29 @@
                 <li><strong>Memoria:</strong> 32 MB de RAM</li>
                 <li><strong>Pantalla:</strong> LCD de 4.3 pulgadas, 480x272 píxeles</li>
             </ul>
-            <img src="../Imagenes/Playstation Portable.png" alt="Playstation Portable">
+            </div>
         </div>
 
-        <div>
+        <div class="consolaspaginas">
             <h2>2006 - PlayStation 3</h2>
-            <p>La PlayStation 3 llegó en 2006, introduciendo el formato Blu-ray y gráficos en alta definición.</p>
-            <h3>Especificaciones de Hardware</h3>
+            <p>La PlayStation 3 llegó en 2006, introduciendo el formato Blu-ray y gráficos en alta definición<p>
+                <img src="/Imagenes/Playstattion 3.png" alt="PlayStation 3">
+                <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
             <ul>
                 <li><strong>CPU:</strong> 3.2 GHz Cell Broadband Engine</li>
                 <li><strong>GPU:</strong> NVIDIA RSX 'Reality Synthesizer'</li>
                 <li><strong>Memoria:</strong> 256 MB de XDR RAM</li>
                 <li><strong>Almacenamiento:</strong> De 20 a 500 GB</li>
             </ul>
-            <img src="../Imagenes/Playstation 3.png" alt="PlayStation 3">
+            </div>
         </div>
 
-        <div>
+        <div class="consolaspaginas">
             <h2>2013 - PlayStation 4</h2>
-            <p>En 2013, la PlayStation 4 trajo un hardware más potente y una integración más profunda con los servicios
-                online de Sony.</p>
+            <p>En 2013, la PlayStation 4 trajo un hardware más potente y una integración más profunda con los servicios online de Sony.</p>
+            <img src="/Imagenes/Playstation 4.png" alt="PlayStation 4">
+            <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
                 <li><strong>CPU:</strong> 8 núcleos x86-64 AMD Jaguar</li>
@@ -93,14 +101,15 @@
                 <li><strong>Memoria:</strong> 8 GB de GDDR5 RAM</li>
                 <li><strong>Almacenamiento:</strong> 500 GB a 1 TB </li>
             </ul>
-            <img src="../Imagenes/Playstation 4.png" alt="PlayStation 4">
-
+            </div>
         </div>
 
-        <div>
+        <div class="consolaspaginas">
             <h2>2020 - PlayStation 5</h2>
             <p>La última consola de Sony, PlayStation 5, lanzada en 2020, Incluida con gráficos
                 4K y unos discos duros SSD que permiten una velocidad de carga casi instantánea.</p>
+                <img src="/Imagenes/Playstation 5.png" alt="PlayStation 5">
+                <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
                 <li><strong>CPU:</strong> 8 núcleos AMD Zen 2 a 3.5 GHz</li>
@@ -108,8 +117,7 @@
                 <li><strong>Memoria:</strong> 16 GB de GDDR6 RAM</li>
                 <li><strong>Almacenamiento:</strong> 825 GB</li>
             </ul>
-            <img src="../Imagenes/Playstation 5.png" alt="PlayStation 5">
-
+            </div>
         </div>
     </section>
 
