--- a/Paginas/xbox.html
+++ b/Paginas/xbox.html
@@ -8,7 +8,7 @@
     <title>Xbox</title>
 </head>
 
-<body class="Xbox">
+<body class="xbox">
     <!-- navbar -->
     <header>
         <nav class="navbar">
@@ -24,75 +24,84 @@
             </ul>
         </nav>
     </header>
-
-    <section>
+    <section class="cronologia">
         <h1>Consolas de Xbox</h1>
-
-        <div>
+        <div class="consolaspaginas">
             <h2>2001 - Xbox</h2>
-            <p>La Xbox original fue lanzada por Microsoft en 2001, introduciendo el servicio Xbox Live y un potente hardware para la época.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> 733 MHz Intel Pentium III</li>
-                <li><strong>GPU:</strong> 233 MHz Nvidia NV2A</li>
-                <li><strong>Memoria:</strong> 64 MB RAM</li>
-                <li><strong>Almacenamiento:</strong> 8 GB a 10 GB </li>
-            </ul>
-            <img src="/Imagenes/Xbox Clasica.png" alt="Xbox original">
-        </div>
+            <p>La Xbox original fue lanzada por Microsoft en 2001, introduciendo el servicio Xbox Live y un potente
+                hardware para la época.</p>
+            <img src="/Imagenes/Xbox clasica.png" alt="Xbox original">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> 733 MHz Intel Pentium III</li>
+                    <li><strong>GPU:</strong> 233 MHz Nvidia NV2A</li>
+                    <li><strong>Memoria:</strong> 64 MB RAM</li>
+                    <li><strong>Almacenamiento:</strong> 8 GB a 10 GB</li>
+                </ul>
 
-        <div>
+            </div>
+        </div>
+        <div class="consolaspaginas">
             <h2>2005 - Xbox 360</h2>
-            <p>La Xbox 360 fue lanzada en 2005, destacada por sus juegos en alta definición y una gran biblioteca de títulos.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> 3.2 GHz PowerPC Tri-Core Xenon</li>
-                <li><strong>GPU:</strong> 500 MHz ATI Xenos</li>
-                <li><strong>Memoria:</strong> 512 MB RAM</li>
-                <li><strong>Almacenamiento:</strong> De 20 GB a 250 GB</li>
-            </ul>
+            <p>La Xbox 360 fue lanzada en 2005, destacada por sus juegos en alta definición y una gran biblioteca de
+                títulos.</p>
             <img src="/Imagenes/Xbox 360.png" alt="Xbox 360">
-        </div>
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> 3.2 GHz PowerPC Tri-Core Xenon</li>
+                    <li><strong>GPU:</strong> 500 MHz ATI Xenos</li>
+                    <li><strong>Memoria:</strong> 512 MB RAM</li>
+                    <li><strong>Almacenamiento:</strong> De 20 GB a 250 GB</li>
+                </ul>
 
-        <div>
+            </div>
+        </div>
+        <div class="consolaspaginas">
             <h2>2013 - Xbox One</h2>
             <p>La Xbox One fue lanzada en 2013, con un enfoque en las capacidades gráficas mejoradas.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> 8 núcleos AMD Jaguar a 1.75 GHz</li>
-                <li><strong>GPU:</strong> 1.31 TFLOPS, AMD Radeon</li>
-                <li><strong>Memoria:</strong> 8 GB RAM</li>
-                <li><strong>Almacenamiento:</strong> 500 GB a 1 TB </li>
-            </ul>
-            <img src="/Imagenes/Xbox One.png" alt="Xbox One">
+            <img src="/Imagenes/Xbox one.png" alt="Xbox One">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> 8 núcleos AMD Jaguar a 1.75 GHz</li>
+                    <li><strong>GPU:</strong> 1.31 TFLOPS, AMD Radeon</li>
+                    <li><strong>Memoria:</strong> 8 GB RAM</li>
+                    <li><strong>Almacenamiento:</strong> 500 GB a 1 TB</li>
+                </ul>
+            </div>
         </div>
-
-        <div>
+        <div class="consolaspaginas">
             <h2>2020 - Xbox Series X</h2>
-            <p>La Xbox Series X fue lanzada en 2020 como la consola más potente de Microsoft, con gráficos 4K y tiempos de carga ultrarrápidos gracias a su SSD.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> 8 núcleos AMD Zen 2 a 3.8 GHz</li>
-                <li><strong>GPU:</strong> 12 TFLOPS, AMD RDNA 2</li>
-                <li><strong>Memoria:</strong> 16 GB RAM</li>
-                <li><strong>Almacenamiento:</strong> 1 TB </li>
-            </ul>
+            <p>La Xbox Series X fue lanzada en 2020 como la consola más potente de Microsoft, con gráficos 4K y tiempos
+                de carga ultrarrápidos gracias a su SSD.</p>
             <img src="/Imagenes/Xbox Series X.png" alt="Xbox Series X">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> 8 núcleos AMD Zen 2 a 3.8 GHz</li>
+                    <li><strong>GPU:</strong> 12 TFLOPS, AMD RDNA 2</li>
+                    <li><strong>Memoria:</strong> 16 GB RAM</li>
+                    <li><strong>Almacenamiento:</strong> 1 TB</li>
+                </ul>
+            </div>
         </div>
-
-        <div>
+        <div class="consolaspaginas">
             <h2>2020 - Xbox Series S</h2>
-            <p>Lanzada junto con la Xbox Series X, la Xbox Series S ofrece una opción más asequible con un enfoque en jugos a 1440p y un tamaño más compacto.</p>
-            <h3>Especificaciones de Hardware</h3>
-            <ul>
-                <li><strong>CPU:</strong> 8 núcleos AMD Zen 2 a 3.6 GHz</li>
-                <li><strong>GPU:</strong> 4 TFLOPS, AMD RDNA 2</li>
-                <li><strong>Memoria:</strong> 10 GB RAM</li>
-                <li><strong>Almacenamiento:</strong> 512 GB </li>
-            </ul>
+            <p>Lanzada junto con la Xbox Series X, la Xbox Series S ofrece una opción más asequible con un enfoque en
+                jugos a 1440p y un tamaño más compacto.</p>
             <img src="/Imagenes/Xbox Series S.png" alt="Xbox Series S">
+            <div class="especificaciones">
+                <h3>Especificaciones de Hardware</h3>
+                <ul>
+                    <li><strong>CPU:</strong> 8 núcleos AMD Zen 2 a 3.6 GHz</li>
+                    <li><strong>GPU:</strong> 4 TFLOPS, AMD RDNA 2</li>
+                    <li><strong>Memoria:</strong> 10 GB RAM</li>
+                    <li><strong>Almacenamiento:</strong> 512 GB</li>
+                </ul>
+            </div>
         </div>
-
     </section>
 
     <!-- Footer -->
@@ -103,7 +112,7 @@
                 <p class="info-footer">Información de Contacto</p>
                 <ul>
                     <li>Email: htrrodrigo9@gmail.com</li>
-                    <li>Email: santiagolara1242@gmail.com </li>
+                    <li>Email: santiagolara1242@gmail.com</li>
                 </ul>
             </div>
 
