--- a/Paginas/playstation.html
+++ b/Paginas/playstation.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <link rel="stylesheet" href="/Styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayStation </title>
@@ -13,13 +13,13 @@
     <header>
         <nav class="navbar">
             <a href="index.html" class="contenedor-logo">
-                <img src="/Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
+                <img src="../Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
                 <span class="nombre-pagina">FREAK-GEN</span>
             </a>
             <ul class="menu">
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/index.html#consolas">Consolas</a></li>
-                <li><a href="/index.html#juegos">Juegos</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../index.html#consolas">Consolas</a></li>
+                <li><a href="../index.html#juegos">Juegos</a></li>
                 <li><a href="./Contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -31,7 +31,7 @@
         <div class="consolaspaginas">
             <h2>1994 - PlayStation</h2>
             <p>La PlayStation original fue lanzada por Sony en 1994, revolucionando el mundo de los videojuegos con su capacidad para gráficos 3D.</p>
-            <img src="/Imagenes/Playstation 1.png" alt="PlayStation 1">
+            <img src="../Imagenes/Playstation 1.png" alt="PlayStation 1">
            
            <div class="especificaciones"> 
             <h3>Especificaciones de Hardware</h3>
@@ -47,7 +47,7 @@
         <div class="consolaspaginas">
             <h2>2000 - PlayStation 2</h2>
             <p>PlayStation 2 fue lanzada en el año 2000, siendo la consola más vendida de todos los tiempos, con más de 155 millones de unidades vendidas.</p>
-            <img src="/Imagenes/Playstation 2.png" alt="PlayStation 2">
+            <img src="../Imagenes/Playstation 2.png" alt="PlayStation 2">
             <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
@@ -62,7 +62,7 @@
         <div class="consolaspaginas">
             <h2>2004 - Playstation Portable (PSP)</h2>
             <p>La PlayStation Portable (PSP) fue lanzada en 2004 en Japón y en 2005 a nivel mundial. Fue la primera consola portátil de Sony.</p>
-            <img src="/Imagenes/Playstation Portable.png" alt="Playstation Portable">
+            <img src="../Imagenes/Playstation Portable.png" alt="Playstation Portable">
             <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
@@ -77,7 +77,7 @@
         <div class="consolaspaginas">
             <h2>2006 - PlayStation 3</h2>
             <p>La PlayStation 3 llegó en 2006, introduciendo el formato Blu-ray y gráficos en alta definición<p>
-                <img src="/Imagenes/Playstattion 3.png" alt="PlayStation 3">
+                <img src="../Imagenes/Playstattion 3.png" alt="PlayStation 3">
                 <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
             <ul>
@@ -92,7 +92,7 @@
         <div class="consolaspaginas">
             <h2>2013 - PlayStation 4</h2>
             <p>En 2013, la PlayStation 4 trajo un hardware más potente y una integración más profunda con los servicios online de Sony.</p>
-            <img src="/Imagenes/Playstation 4.png" alt="PlayStation 4">
+            <img src="../Imagenes/Playstation 4.png" alt="PlayStation 4">
             <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
@@ -108,7 +108,7 @@
             <h2>2020 - PlayStation 5</h2>
             <p>La última consola de Sony, PlayStation 5, lanzada en 2020, Incluida con gráficos
                 4K y unos discos duros SSD que permiten una velocidad de carga casi instantánea.</p>
-                <img src="/Imagenes/Playstation 5.png" alt="PlayStation 5">
+                <img src="../Imagenes/Playstation 5.png" alt="PlayStation 5">
                 <div class="especificaciones">
             <h3>Especificaciones de Hardware</h3>
             <ul>
@@ -142,10 +142,10 @@
 
             <div class="menu-footer">
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/index.html#consolas">Consolas</a></li>
-                    <li><a href="/index.html#juegos">Juegos</a></li>
-                    <li><a href="./Paginas/Contacto.html">Contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../index.html#consolas">Consolas</a></li>
+                    <li><a href="../index.html#juegos">Juegos</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
