--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#consolas">Consolas</a></li>
                 <li><a href="#juegos">Juegos</a></li>
-                <li><a href="./Paginas/Contacto.html">Contacto</a></li>
+                <li><a href="Paginas/Contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
