--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="/Styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -13,13 +13,13 @@
         <header >
             <nav class="navbar">
                 <a href="index.html" class="contenedor-logo">
-                    <img src="/Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
+                    <img src="../Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
                     <span class="nombre-pagina">FREAK-GEN</span>
                 </a>
                 <ul class="menu">
-                    <li><a href="/index.html">Inicio</a></li>
-                    <li><a href="/index.html#consolas">Consolas</a></li>
-                    <li><a href="/index.html#juegos">Juegos</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../index.html#consolas">Consolas</a></li>
+                    <li><a href="../index.html#juegos">Juegos</a></li>
                     <li><a href="./Contacto.html">Contacto</a></li>
                 </ul>
             </nav>
