Arreglos para gitHub Pages

--- a/Paginas/xbox.html
+++ b/Paginas/xbox.html
@@ -30,7 +30,7 @@
             <h2>2001 - Xbox</h2>
             <p>La Xbox original fue lanzada por Microsoft en 2001, introduciendo el servicio Xbox Live y un potente
                 hardware para la época.</p>
-            <img src="/Imagenes/Xbox clasica.png" alt="Xbox original">
+            <img src="../Imagenes/Xbox clasica.png" alt="Xbox original">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -46,7 +46,7 @@
             <h2>2005 - Xbox 360</h2>
             <p>La Xbox 360 fue lanzada en 2005, destacada por sus juegos en alta definición y una gran biblioteca de
                 títulos.</p>
-            <img src="/Imagenes/Xbox 360.png" alt="Xbox 360">
+            <img src="../Imagenes/Xbox 360.png" alt="Xbox 360">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -61,7 +61,7 @@
         <div class="consolaspaginas">
             <h2>2013 - Xbox One</h2>
             <p>La Xbox One fue lanzada en 2013, con un enfoque en las capacidades gráficas mejoradas.</p>
-            <img src="/Imagenes/Xbox one.png" alt="Xbox One">
+            <img src="../Imagenes/Xbox one.png" alt="Xbox One">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -76,7 +76,7 @@
             <h2>2020 - Xbox Series X</h2>
             <p>La Xbox Series X fue lanzada en 2020 como la consola más potente de Microsoft, con gráficos 4K y tiempos
                 de carga ultrarrápidos gracias a su SSD.</p>
-            <img src="/Imagenes/Xbox Series X.png" alt="Xbox Series X">
+            <img src="../Imagenes/Xbox Series X.png" alt="Xbox Series X">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -91,7 +91,7 @@
             <h2>2020 - Xbox Series S</h2>
             <p>Lanzada junto con la Xbox Series X, la Xbox Series S ofrece una opción más asequible con un enfoque en
                 jugos a 1440p y un tamaño más compacto.</p>
-            <img src="/Imagenes/Xbox Series S.png" alt="Xbox Series S">
+            <img src="../Imagenes/Xbox Series S.png" alt="Xbox Series S">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
