--- a/Paginas/nintendo.html
+++ b/Paginas/nintendo.html
@@ -30,7 +30,7 @@
             <h2>1996 - Nintendo 64</h2>
             <p>La Nintendo 64 fue lanzada en 1996 y fue la primera consola de Nintendo en utilizar gráficos
                 tridimensionales completos.</p>
-            <img src="/Imagenes/Nintendo 64.png" alt="Nintendo 64">
+            <img src="../Imagenes/Nintendo 64.png" alt="Nintendo 64">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -45,7 +45,7 @@
         <div class="consolaspaginas">
             <h2>2001 - GameCube</h2>
             <p>La Nintendo GameCube fue lanzada en 2001, ofreciendo un enfoque en el multijugador local.</p>
-            <img src="/Imagenes/Nintendo Game Cube.png" alt="Nintendo GameCube">
+            <img src="../Imagenes/Nintendo Game Cube.png" alt="Nintendo GameCube">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -61,7 +61,7 @@
             <h2>2001 - Game Boy Advance</h2>
             <p>La Game Boy Advance, lanzada en 2001, fue una consola portátil que llevó los juegos de Nintendo a una
                 nueva era de color.</p>
-            <img src="/Imagenes/Nintendo Game Boy Advance.png" alt="Game Boy Advance">
+            <img src="../Imagenes/Nintendo Game Boy Advance.png" alt="Game Boy Advance">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -77,7 +77,7 @@
             <h2>2004 - Nintendo DS</h2>
             <p>La Nintendo DS fue lanzada en 2004, revolucionando el mercado de las consolas portátiles con su pantalla
                 doble y capacidades táctiles.</p>
-            <img src="/Imagenes/Nintendo DS.png" alt="Nintendo DS">
+            <img src="../Imagenes/Nintendo DS.png" alt="Nintendo DS">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -92,7 +92,7 @@
         <div class="consolaspaginas">
             <h2>2006 - Nintendo Wii</h2>
             <p>La Nintendo Wii fue lanzada en 2006 y se destacó por su control de movimiento revolucionario.</p>
-            <img src="/Imagenes/Nintendo Wii.png" alt="Nintendo Wii">
+            <img src="../Imagenes/Nintendo Wii.png" alt="Nintendo Wii">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
@@ -107,7 +107,7 @@
             <h2>2017 - Nintendo Switch</h2>
             <p>La Nintendo Switch fue lanzada en 2017, destacándose por su capacidad híbrida que permite jugar tanto en
                 casa como en modo portátil.</p>
-            <img src="/Imagenes/Nintendo Switch.png" alt="Nintendo Switch">
+            <img src="../Imagenes/Nintendo Switch.png" alt="Nintendo Switch">
             <div class="especificaciones">
                 <h3>Especificaciones de Hardware</h3>
                 <ul>
