--- a/Paginas/nintendo.html
+++ b/Paginas/nintendo.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <a href="index.html" class="contenedor-logo">
-                <img src=",,/Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
+                <img src="../Imagenes/icono-joystick.png" alt="Logo icono" class="logo">
                 <span class="nombre-pagina">FREAK-GEN</span>
             </a>
             <ul class="menu">
